fix feet and readiong on smalls creens

--- a/src/components/create-review/create-review.module.css
+++ b/src/components/create-review/create-review.module.css
@@ -52,7 +52,6 @@ h3 {
 
 .inputform input {
   border: none;
-  border-bottom: 2px solid var(--color-main-text);
   min-height: 3.5vh;
 }
 
@@ -61,15 +60,14 @@ h3 {
   padding: 0.2% 1%;
   box-sizing: border-box;
   color: var(--color-main-text);
-
+  border: none;
+  border-bottom: 2px solid var(--color-main-text);
   font-size: 0.85vw;
 }
 
 .inputform textarea {
   resize: none;
   min-height: 9.8vh;
-  border: 2px solid var(--color-main-text);
-  border-radius: 0.6vh;
 }
 
 .footer {
