--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -18,8 +18,9 @@
     color: var(--color-main-text);
   }
   h5 {
-    font-size: 1.2vw;
-    margin-bottom: 8%;
+    font-size: 1vw;
+    line-height: 1vw;
+    margin-bottom: 0.5vh;
   }
 }
 
@@ -68,8 +69,9 @@
   align-self: start;
   margin-top: 4%;
   label {
-    line-height: 25px;
-    font-size: 14px;
+    line-height: 1.2vw;
+    font-size: 0.8vw;
+    font-weight: 300;
     cursor: pointer;
   }
 }
@@ -80,26 +82,27 @@
   align-self: start;
   margin-top: 4%;
   label {
-    line-height: 25px;
-    font-size: 14px;
+    line-height: 1.2vw;
+    font-size: 0.8vw;
+    font-weight: 300;
     cursor: pointer;
   }
 }
 
 .social {
   align-self: start;
-  margin-top: 4%;
+  margin-top: 3.8%;
   display: flex;
   flex-direction: column;
 }
 
 .socialicons {
   display: flex;
-  gap: 10px;
-
+  gap: 0.5vw;
+  margin-top: 1vh;
   svg {
-    width: 30px;
-    height: 30px;
+    line-height: 1.1vw;
+    width: 1.5vw;
     cursor: pointer;
   }
 }
