--- a/src/pages/developer/discover/discover.module.css
+++ b/src/pages/developer/discover/discover.module.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   height: 100%;
+  width: 69%;
   align-self: center;
   box-sizing: border-box;
   gap: 2.9vh;
